[package]
name = "metrics"
version = "0.0.1"
edition = "2024"

[features]
otlp = ["dep:opentelemetry-otlp", "dep:tonic", "dep:tokio"]
stdout = ["dep:opentelemetry-stdout", "dep:tokio"]

[dependencies]
configs = { git = "ssh://git@github.com/ruskit/configs.git", rev = "v0.0.1" }

opentelemetry = { version = "0.29.1", features = ["metrics"] }
opentelemetry_sdk = { version = "0.29.0", features = ["metrics", "rt-tokio"] }
tracing = { version = "0.1.41" }
thiserror = { version = "2.0.12" }

# OTLP Featue
tonic = { version = "0.12.3", features = ["tls-native-roots"], optional = true }
tokio = { version = "1.45.0", features = ["default"], optional = true }
opentelemetry-otlp = { version = "0.29.0", features = ["metrics", "prost", "grpc-tonic", "gzip-tonic","tls", "tls-roots"], optional = true }

# Stdout
opentelemetry-stdout = { version = "0.29.0", features = ["metrics"], optional = true }
